--- a/templates/partials/navbar.html
+++ b/templates/partials/navbar.html
@@ -6,7 +6,7 @@
             </a>
         </div>
         <div class='pull-right'>
-            <a href='/pools/new' class='btn btn-default navbar-btn'> List a New  </a>
+            <a href='/pools/new' class='btn btn-default navbar-btn'> List a Pool </a>
         </div>
     </div>
 </nav>
