--- a/templates/partials/pools_form.html
+++ b/templates/partials/pools_form.html
@@ -1,28 +1,39 @@
-<form method='POST' action='/pooles'>
+<form method='POST' action='/pools'>
     <fieldset>
     <legend>{{ pool.title }}</legend>
-    <!-- pooles title-->
-    <p>
+    <!-- pools title-->
+    <!-- <p>
         <label for='pool_name'>Item Name</label><br>
         <input id="pool_name" type='text' name='pool_name' value='{{ pool.name }}' required/>
+    </p> -->
+
+    <!-- Location -->
+    <p>
+        <label for='location'>City</label><br>
+        <input id="location" type='text' name='location' value='{{ pool.location }}' placeholder="San Francisco" required/>
+    </p>
+
+    <!-- Size -->
+    <p>
+        <label for='size'>Size (in feet)</label><br>
+        <input id ="size" type='text' name='size' value='{{ pool.size }}' placeholder="10' X 10'" required/>
     </p>
 
     <!-- Description -->
     <p>
         <label for='description'>Description</label><br>
-        <input id ="description" type='text' name='description' value='{{ pool.description }}' required/>
+        <input id ="description" type='text' name='description' value='{{ pool.description }}' placeholder="very big pool" required/>
     </p>
 
     <!-- Price -->
     <p>
-        <label for='price'>Price</label><br>
+        <label for='price'>Price /hr</label><br>
         <input id="price" type='number' name='price' placeholder='$' value='{{ pool.price }}' required/>
     </p>
-
-    <!-- brand -->
+        <label for='guests'>Max Guests</label><br>
+        
     <p>
-        <label for='brand'>Brand</label><br>
-        <input id="brand" type='text' name='brand' value='{{ pool.brand }}' required/>
+
     </p>
     <p>
         <label for='image'>Image</label><br>
@@ -37,3 +48,11 @@
         <button class="btn btn-primary" type='submit'>Save Listing</button>
     </p>
 </form>
+
+location
+size
+price
+max people
+<indoor>
+<outdoor></outdoor>
+description/details
