--- a/templates/pools_index.html
+++ b/templates/pools_index.html
@@ -4,7 +4,7 @@
 <div class="row">
     {% for pool in pools %}
 		<div class="col-md-3">
-	        <h2><a href="/pooles/{{pool._id}}">{{ pool.title }}</h2>
+	        <h2><a href="/pools/{{pool._id}}">{{ pool.title }}</h2>
  	            <img width="240" height="240" src="/static/{{ pool.brand }}.png">
 			<small>{{ pool.description }}</small>
 			 <p>${{ pool.price }}</p>
