--- a/templates/partials/pools_form.html
+++ b/templates/partials/pools_form.html
@@ -9,7 +9,7 @@
 
     <!-- Location -->
     <p>
-        <label for='location'>City</label><br>
+        <label for='location'>Location</label><br>
         <input id="location" type='text' name='location' value='{{ pool.location }}' placeholder="San Francisco" required/>
     </p>
 
@@ -30,8 +30,19 @@
         <label for='price'>Price /hr</label><br>
         <input id="price" type='number' name='price' placeholder='$' value='{{ pool.price }}' required/>
     </p>
-        <label for='guests'>Max Guests</label><br>
-        
+        <label for='guests'>Guests</label><br>
+        <select name="guests">
+            <option value="1">1</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="4">4</option>
+            <option value="5">5</option>
+            <option value="6">6</option>
+            <option value="7">7</option>
+            <option value="8">8</option>
+            <option value="9">9</option>
+            <option value="10">10+</option>
+        </select>
     <p>
 
     </p>
