--- a/templates/partials/navbar.html
+++ b/templates/partials/navbar.html
@@ -5,8 +5,16 @@
                 rent-a-pool
             </a>
         </div>
+        <!-- <div class="container-fluid justify-content-end"> -->
         <div class='pull-right'>
-            <a href='/pools/new' class='btn btn-default navbar-btn'> List a Pool </a>
+            <a href="/about" class='btn btn-default btn-outline-success navbar-btn'>about us</a>
         </div>
+        <div class='pull-right'>
+            <a href='/pools/reserve' class='btn btn-default btn-outline-success navbar-btn'> Reserve a Pool </a>
+        </div>
+        <div class='pull-right'>
+            <a href='/pools/new' class='btn btn-default btn-outline-success navbar-btn'> List a Pool </a>
+        </div>
+        <!-- </div> -->
     </div>
 </nav>
