added login view

--- a/templates/partials/pools_form.html
+++ b/templates/partials/pools_form.html
@@ -43,14 +43,22 @@
             <option value="9">9</option>
             <option value="10">10+</option>
         </select>
+    </p>
     <p>
+        Dates available
+        
+    </p>
 
     </p>
     <p>
         <label for='image'>Image</label><br>
         <p>select an image to upload</p>
-        <input type="file" name="image" id="image">
+        <input type="file" name="image" >
     </p>
+
+    <p><input type="file" accept="image/*" id="image"></p>
+
+    
 
     </fieldset>
 
@@ -60,7 +68,7 @@
     </p>
 </form>
 
-location
+locati
 size
 price
 max people
