--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,7 @@
   <meta charset='utf-8'>
   <title>rent-a-pool</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+  <link rel="text/css" href="templates/base.css">
   <!-- <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css'> -->
 </head>
 <body>
@@ -14,7 +15,44 @@
     {% block content %}
     
     {% endblock %}
-	</div>
+  </div>
+  <div class="break">
+    <br>
+    <br>
+    <br>
+    <style>
+      .break {
+        padding-top: 10em;
+        padding-bottom: 10em;
+        /* line-height: 4; */
+      }
+    </style>
+  </div>
+  <div class="graphic background-img">
+    <img src="static/ocean.jpg" class="imgg">
+    <style>
+      .imgg {
+        width: 1650px;
+        height: 500px;
+        /* object-fit: contain; */
+        /* border: 10px; */
+        position:fixed;
+        right:0;
+        bottom:0;
+        /* margin:0; */
+      }
+      /* .break {
+        margin-top: auto;
+        margin: 100px;
+        margin-bottom: auto;
+      } */
+    </style>
+  </div>
+  <div class="drops">
+    <style type="text/scss">
+      
+    </style>
+  </div>
 
     <script src="//code.jquery.com/jquery-1.12.0.min.js"></script>
     <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
