--- a/templates/partials/navbar.html
+++ b/templates/partials/navbar.html
@@ -15,6 +15,9 @@
         <div class='pull-right'>
             <a href='/pools/new' class='btn btn-default btn-outline-success navbar-btn'> List a Pool </a>
         </div>
+        <div class='pull-right'>
+            <a href='/pools/login' class='btn btn-default btn-outline-success navbar-btn'>Login</a>
+        </div>
         <!-- </div> -->
     </div>
 </nav>
