--- a/templates/base.css
+++ b/templates/base.css
@@ -1,11 +1,11 @@
 .background-img {
-    width: 5000px;
-    height:500px;
-    border: 10px;
+    /* width: 1000px;
+    height: 500px; */
+    background-image: url('/static/pool2.jpg')
 }
-
+/* 
 .break {
     margin-top: auto;
     margin: 100px;
     margin-bottom: auto;
-}
+} */
