--- a/templates/partials/pools_form.html
+++ b/templates/partials/pools_form.html
@@ -46,9 +46,44 @@
     </p>
     <p>
         Dates available
-        
-    </p>
 
+    </p>
+    <label for="checkin" class="field-label">Check-in Date</label>
+    <label for="checkin" class="field prepend-icon">
+        <input type="text" id="checkin" name="checkin" class="gui-input" required="" placeholder="mm/dd/yyyy">
+        <span class="field-icon"><i class="fa fa-calendar"></i></span>  
+    </label>
+
+    <label for="checkout" class="field-label">Check-out Date</label>
+    <label for="checkout" class="field prepend-icon">
+        <input type="text" id="checkout" name="checkout" class="gui-input" required="" placeholder="mm/dd/yyyy">
+        <span class="field-icon"><i class="fa fa-calendar"></i></span>  
+    </label>
+    <script type="text/javascript">
+        $("#booking-form").validate();
+         
+        $("#checkin").datepicker({
+            defaultDate: "+100w",
+            changeMonth: false,
+            numberOfMonths: 1,
+            prevText: '<i class="fa fa-chevron-left"></i>',
+            nextText: '<i class="fa fa-chevron-right"></i>',
+            onClose: function( selectedDate ) {
+                $( "#checkout" ).datepicker( "option", "minDate", selectedDate );
+            }
+        });
+         
+        $("#checkout").datepicker({
+            defaultDate: "+100w",
+            changeMonth: false,
+            numberOfMonths: 1,
+            prevText: '<i class="fa fa-chevron-left"></i>',
+            nextText: '<i class="fa fa-chevron-right"></i>',            
+            onClose: function( selectedDate ) {
+                $( "#checkin" ).datepicker( "option", "maxDate", selectedDate );
+            }
+        });
+    </script>
     </p>
     <p>
         <label for='image'>Image</label><br>
