--- a/templates/about.html
+++ b/templates/about.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset='utf-8'>
   <title>rent-a-pool</title>
+  <style>html { font-size: 12px; font-family: Arial, Helvetica, sans-serif; }</style>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <!-- <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css'> -->
 </head>
@@ -11,8 +12,16 @@
 	{% include 'partials/navbar.html' %}
 
 	<div class='container'>
-    <h1>About Rent-A-Pool</h1>
-    <h3>We are your solution to finding a pool to swim in for as long as you'd like in any city you are located.</h3>
+        <style>
+            .container {
+                margin-top: 15%;
+            }
+            * {
+                font-family: 'Seymour One', sans-serif;
+            }
+        </style>
+        <h1>About Rent-A-Pool</h1>
+        <h3>We are your solution to finding a pool to swim in for as long as you'd like in any city you are located.</h3>
 	</div>
 
     <script src="//code.jquery.com/jquery-1.12.0.min.js"></script>
