--- a/templates/partials/pools_form.html
+++ b/templates/partials/pools_form.html
@@ -1,4 +1,4 @@
-<form method='POST' action='/pools'>
+<form method='POST' action='/reserve'>
     <fieldset>
     <legend>{{ pool.title }}</legend>
     <!-- pools title-->
@@ -59,31 +59,6 @@
         <input type="text" id="checkout" name="checkout" class="gui-input" required="" placeholder="mm/dd/yyyy">
         <span class="field-icon"><i class="fa fa-calendar"></i></span>  
     </label>
-    <script type="text/javascript">
-        $("#booking-form").validate();
-         
-        $("#checkin").datepicker({
-            defaultDate: "+100w",
-            changeMonth: false,
-            numberOfMonths: 1,
-            prevText: '<i class="fa fa-chevron-left"></i>',
-            nextText: '<i class="fa fa-chevron-right"></i>',
-            onClose: function( selectedDate ) {
-                $( "#checkout" ).datepicker( "option", "minDate", selectedDate );
-            }
-        });
-         
-        $("#checkout").datepicker({
-            defaultDate: "+100w",
-            changeMonth: false,
-            numberOfMonths: 1,
-            prevText: '<i class="fa fa-chevron-left"></i>',
-            nextText: '<i class="fa fa-chevron-right"></i>',            
-            onClose: function( selectedDate ) {
-                $( "#checkin" ).datepicker( "option", "maxDate", selectedDate );
-            }
-        });
-    </script>
     </p>
     <p>
         <label for='image'>Image</label><br>
@@ -103,10 +78,10 @@
     </p>
 </form>
 
-locati
+<!-- locati
 size
 price
 max people
 <indoor>
 <outdoor></outdoor>
-description/details
+description/details -->
