--- a/templates/partials/navbar.html
+++ b/templates/partials/navbar.html
@@ -10,6 +10,8 @@
                 }
                 .navbar {
                     border-top: 0;
+                    margin: 25px;
+                    margin-bottom: 90%;
                 }
                 </style>
             </a>
