--- a/templates/partials/pools_form.html
+++ b/templates/partials/pools_form.html
@@ -6,7 +6,10 @@
         <label for='pool_name'>Item Name</label><br>
         <input id="pool_name" type='text' name='pool_name' value='{{ pool.name }}' required/>
     </p> -->
-
+    <p>
+        <label for='title'>Listing Title</label><br>
+        <input id="title" type='text' name='title' value='{{ pool.title }}' placeholder="Luxury pool" required/>
+    </p>
     <!-- Location -->
     <p>
         <label for='location'>Location</label><br>
