--- a/templates/pools_edit.html
+++ b/templates/pools_edit.html
@@ -13,7 +13,16 @@
 	</div>
 </form>
 </div>
-
+<style>
+.break {
+	margin-top: 150px;
+}
+.row {
+	margin-left: 10px;
+	display: flex;
+	align-items: center;
+}
+</style>
 <div class="row">
 	<div class='col-sm-6 col-sm-offset-3'>
 		<a href="/pools/{{pool._id}}"><button class="btn btn-danger">Cancel</button></a>
