--- a/templates/pools_show.html
+++ b/templates/pools_show.html
@@ -8,11 +8,11 @@
 	<div class="col-sm-6 col-sm-offset-3">
 
 		<!-- pool Name -->
-		<h1>{{ pool.pool_name }}</h1>
+		<h1>{{ pool.title }}</h1>
 
 		<!-- pool Picture -->
 		<div class="card"><div class="card-body">
-			<img width="300"  height="300" src="/static/{{ pool.brand }}.png">
+			<img width="300"  height="300" src="{{ pool.uimg }}.png">
 		</div></div>
 
 		<!-- location -->
