updated web views

--- a/templates/pools_show.html
+++ b/templates/pools_show.html
@@ -1,7 +1,13 @@
 {% extends "base.html" %}
 
 {% block content %}
-
+<div>
+    <style>
+      .break {
+        margin-top: 150px;
+      }
+    </style>
+  </div>
 <a href='/'>Back to Home</a>
 
 <div class="row">
