--- a/templates/pools_reserve.html
+++ b/templates/pools_reserve.html
@@ -5,7 +5,6 @@
     <style>html { font-size: 12px; font-family: Arial, Helvetica, sans-serif; }</style>
     <title>calendar</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-
 </head>
 <body>
     {% include 'partials/navbar.html' %}
@@ -26,7 +25,6 @@
         </div>
     </div>
 
-
     <style>
         .container {
             margin-top: 10%;
@@ -36,6 +34,7 @@
         }
         * {
             font-family: 'Seymour One', sans-serif;
+            font-weight: bold;
         }
     </style>
     <div class="container">
@@ -55,6 +54,90 @@
     <div class="container calendar">
         <input type="date" value="2020-01-06">
     </div>
+    <div class="foot">
+            <div class="waveWrapper waveAnimation" style="z-index: -1;">
+                <div class="waveWrapperInner bgTop">
+                    <div class="wave waveTop" style="background-image: url('http://front-end-noobs.com/jecko/img/wave-top.png')"></div>
+                </div>
+                <div class="waveWrapperInner bgMiddle">
+                    <div class="wave waveMiddle" style="background-image: url('http://front-end-noobs.com/jecko/img/wave-mid.png')"></div>
+                </div>
+                <div class="waveWrapperInner bgBottom">
+                    <div class="wave waveBottom" style="background-image: url('http://front-end-noobs.com/jecko/img/wave-bot.png')"></div>
+                </div>
+            </div>
+            <style>
+            @keyframes move_wave {
+                0% {
+                    transform: translateX(0) translateZ(0) scaleY(1)
+                }
+                50% {
+                    transform: translateX(-25%) translateZ(0) scaleY(0.55)
+                }
+                100% {
+                    transform: translateX(-50%) translateZ(0) scaleY(1)
+                }
+            }
+            .waveWrapper {
+                overflow: hidden;
+                position: absolute;
+                left: 0;
+                right: 0;
+                bottom: 0;
+                top: 0;
+                margin: auto;
+            }
+            .waveWrapperInner {
+                position: absolute;
+                width: 100%;
+                overflow: hidden;
+                height: 100%;
+                bottom: -1px;
+                background-image: linear-gradient(to top, #86377b 20%, #27273c 80%);
+            }
+            .bgTop {
+                z-index: 15;
+                opacity: 0.5;
+            }
+            .bgMiddle {
+                z-index: 10;
+                opacity: 0.75;
+            }
+            .bgBottom {
+                z-index: 5;
+            }
+            .wave {
+                position: absolute;
+                left: 0;
+                width: 200%;
+                height: 100%;
+                background-repeat: repeat no-repeat;
+                background-position: 0 bottom;
+                transform-origin: center bottom;
+            }
+            .waveTop {
+                background-size: 50% 100px;
+            }
+            .waveAnimation .waveTop {
+            animation: move-wave 3s;
+            -webkit-animation: move-wave 3s;
+            -webkit-animation-delay: 1s;
+            animation-delay: 1s;
+            }
+            .waveMiddle {
+                background-size: 50% 120px;
+            }
+            .waveAnimation .waveMiddle {
+                animation: move_wave 10s linear infinite;
+            }
+            .waveBottom {
+                background-size: 50% 100px;
+            }
+            .waveAnimation .waveBottom {
+                animation: move_wave 15s linear infinite;
+            }
+            </style>
+        </div>
 {% endblock %}  
 </body>
 </html>
