--- a/templates/base.html
+++ b/templates/base.html
@@ -17,11 +17,11 @@
   <div class="row">
       {% for pool in pools %}
       <div class="col-md-3">
-            <h2><a href="/pools/{{pool._id}}">{{ pool.title }}</h2>
-                <img width="240" height="240" src="{{ pool.image }}">
-        <small>{{ pool.description }}</small>
-        <p>${{ pool.price }}</p>
-        </a>
+            <img width="240" height="240" src="{{ pool.picture }}">
+            <h2><a href="/pools/{{ pool._id }}">{{ pool.title }}</h2>
+            <small>{{ pool.description }}</small>
+            <p>${{ pool.price }} /hr</p>
+          </a>
         </div>
       {% endfor %}
   </div>
