--- a/templates/pools_new.html
+++ b/templates/pools_new.html
@@ -4,7 +4,7 @@
 <div class="break"></div>
 <div class='row'>
     <div class='col-sm-6 col-sm-offset-3'>
-		<form method='POST' action='/reserve/{{pool._id}}'>
+		<form method='POST' action='/'>
 		    {% include 'partials/pools_form.html' %}
 		</form>
 	</div>
