updated site files

--- a/templates/about.html
+++ b/templates/about.html
@@ -14,14 +14,17 @@
 	<div class='container'>
         <style>
             .container {
-                margin-top: 20%;
+                margin-top: 12%;
+                margin-left: 5%;
             }
             * {
-                font-family: 'Seymour One', sans-serif;
+                /* font-family: 'Seymour One', sans-serif; */
+                color: orange;
             }
         </style>
         <h1>About Rent-A-Pool</h1>
         <h3>We are your solution to finding a pool to swim in for as long as you'd like in any city you are located.</h3>
+        <p style="font-style: italic;">Note: Rent-A-Pool cannot be held liable for anything.</p>
     </div>
     <div class="foot">
         <div class="waveWrapper waveAnimation" style="z-index: -1;">
