--- a/templates/partials/pools_form.html
+++ b/templates/partials/pools_form.html
@@ -72,7 +72,7 @@
 
     <!-- BUTTON -->
     <p>
-        <button class="btn btn-primary" type='submit'>Save Listing</button>
+        <button class="btn btn-primary" type='submit'><a href='/' style="color:white;">Save Listing</a></button>
     </p>
 </form>
 
