--- a/templates/pools_new.html
+++ b/templates/pools_new.html
@@ -11,12 +11,15 @@
 </div>
 <style>
 	.break {
-        margin-top: 150px;
+        margin-top: 10%;
     }
 	.row {
         margin-left: 10px;
 		align-content: right;
-    }
+	}
+	* {
+		color: orange;
+	}
 </style>
 <div class="row">
 	<div class='col-sm-6 col-sm-offset-3'>
