--- a/templates/pools_reserve.html
+++ b/templates/pools_reserve.html
@@ -16,7 +16,7 @@
                 <div class="col-md-3">
                     <br>
                     <h2><a href="/pools/{{pool._id}}">{{ pool.title }}</h2>
-                        <img width="240" height="240" src="{{ pool.image }}">
+                        <img width="240" height="240" src="{{ pool.picture }}">
                     <small>{{ pool.description }}</small>
                     <p>${{ pool.price }}</p>
                     </a>
@@ -35,6 +35,7 @@
         * {
             font-family: 'Seymour One', sans-serif;
             font-weight: bold;
+            color: orange;
         }
     </style>
     <div class="container">
