--- a/templates/base.html
+++ b/templates/base.html
@@ -28,12 +28,15 @@
   <div>
     <style>
       .break {
-        margin-top: 150px;
+        margin-top: 12%;
       }
       .row {
         margin-left: 10px;
         display: flex;
         align-items: center;
+      }
+      * {
+        color: orange;
       }
     </style>
   </div>
