--- a/templates/pools_edit.html
+++ b/templates/pools_edit.html
@@ -22,6 +22,9 @@
 	display: flex;
 	align-items: center;
 }
+* {
+	color: orange;
+}
 </style>
 <div class="row">
 	<div class='col-sm-6 col-sm-offset-3'>
