updated reserve page

--- a/templates/pools_reserve.html
+++ b/templates/pools_reserve.html
@@ -27,7 +27,7 @@
 
     <style>
         .container {
-            margin-top: 10%;
+            margin-top: 7%;
         }
         .example {
             align-content: center;
@@ -39,9 +39,9 @@
         }
     </style>
     <div class="container">
-        <h2 style="text-align:center;">reserve a pool</h2>
+        <h2 style="text-align:cente;">reserve a pool</h2>
     </div>
-        <div id="example" style="align-content:center;">
+        <div id="example">
 				<div class="demo-section k-header" style="width: 300px; text-align: center;">
                     <div id="calendar"></div>
                 </div>
@@ -52,7 +52,7 @@
                 });
             </script>
         </div>
-    <div class="container calendar">
+    <div class="container calendar" style="margin-left: 45%;">
         <input type="date" value="2020-01-06">
     </div>
     <div class="foot">
