--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,6 @@
   <meta charset='utf-8'>
   <title>rent-a-pool</title>
   <style>html { font-size: 12px; font-family: Arial, Helvetica, sans-serif; }</style>
-  <link rel="stylesheet" href="/templates/base.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <!-- <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css'> -->
 </head>
@@ -17,8 +16,9 @@
   <div class="row">
       {% for pool in pools %}
       <div class="col-md-3">
+          <a href="/pools/{{ pool._id }}">
             <img width="240" height="240" src="{{ pool.picture }}">
-            <h2><a href="/pools/{{ pool._id }}">{{ pool.title }}</h2>
+            <h2>{{ pool.title }}</h2>
             <small>{{ pool.description }}</small>
             <p>${{ pool.price }} /hr</p>
           </a>
