--- a/templates/partials/pools_form.html
+++ b/templates/partials/pools_form.html
@@ -1,4 +1,4 @@
-<form method='POST' action='/'>
+<form method='POST' action='/pools'>
     <fieldset>
     <legend>{{ pool.title }}</legend>
     <!-- pools title-->
@@ -72,7 +72,7 @@
 
     <!-- BUTTON -->
     <p>
-        <button class="btn btn-primary" type='submit'><a href='/' style="color:white;">Save Listing</a></button>
+        <button class="btn btn-primary" type='submit'><style>color {white}</style>Save Listing</button>
     </p>
 </form>
 
