--- a/templates/pools_reserve.html
+++ b/templates/pools_reserve.html
@@ -9,8 +9,8 @@
 <body>
     {% include 'partials/navbar.html' %}
             
-    <div class='container'>
-        {% block content %}
+    <div class='container' style="margin-top: 10%;">
+        <!--{% block content %}
         <div class="row">
             {% for pool in pools %}
                 <div class="col-md-3">
@@ -22,8 +22,8 @@
                     </a>
                 </div>
             {% endfor %}
-        </div>
-    </div>
+        </div> -->
+    </div> 
 
     <style>
         .container {
@@ -39,7 +39,7 @@
         }
     </style>
     <div class="container">
-        <h2 style="text-align:cente;">reserve a pool</h2>
+        <h2 style="text-align:center;">reserve a pool</h2>
     </div>
         <div id="example">
 				<div class="demo-section k-header" style="width: 300px; text-align: center;">
@@ -139,6 +139,6 @@
             }
             </style>
         </div>
-{% endblock %}  
+<!-- {% endblock %}   -->
 </body>
 </html>
