--- a/templates/pools_show.html
+++ b/templates/pools_show.html
@@ -35,7 +35,8 @@
 		<!-- location -->
 		<strong>Location (address given upon reservation)</strong>
 		<!-- <p>{{ pool.location }}</p> -->
-
+		<br>
+		<br>
 		<!-- Description of the item -->
 		<strong>Description</strong>
 		<p>{{ pool.description }}</p>
@@ -49,13 +50,13 @@
 		<p>{{ pool.size }} </p>
 
 		<strong># of guests: </strong><p>{{ pool.guests }}</p>
-
-		<p><a href="/pools/{{ pool._id }}/reserve"><button class="btn btn-primary">Reserve Pool</button> </a></p>
+		<br>
+		<p><a href="/pools/reserve"><button class="btn btn-primary">Reserve Pool</button> </a></p>
 
 		<p><a href="/pools/{{ pool._id }}/edit"><button class="btn btn-primary">Edit Item</button></a></p>
-		<p><form method="POST" action="/pools/{{ pool._id }}/delete">
+		<!-- <p><form method="POST" action="/pools/{{ pool._id }}/delete"> -->
 			<input type='submit' name='_method' value='DELETE' style="background-color:red;color:white;">
-		</form></p>
+		<!-- </form></p> -->
 	</div>
 </div>
 {% endblock %}
